@@ -1,6 +1,6 @@
 /*
 
-Copyright (c) 2008, Arvid Norberg
+Copyright (c) 2008-2012, Arvid Norberg
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
